package td1.refactor.api.general.monetary;

public interface Product {
    double weight();

    double price();
}
